<resources>
    <string name="app_name">PerfectSleep</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="date">Date</string>
    <string name="sleep_score">Sleep score</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_date">Sleep records</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="back">Back</string>
    <string name="last_nights_sleep_score">Last nights sleep score</string>
    <string name="sleep_score_number">85</string>
    <string name="start">Start</string>

    <string name="sleepScoreValG">85*</string>
    <string name="sleep_score_cal">Sleep score</string>
    

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
<<<<<<< Updated upstream
    <string name="title_activity_sleep_tracker">SleepTracker</string>
=======
<<<<<<< HEAD
    <string name="title_activity_sleep_tracker">SleepTracker</string>
=======

>>>>>>> 741d934070e3584e9cbd55c4086d5622d40f6f82
>>>>>>> Stashed changes
</resources>